[package]
name = "kparser"
version = "0.1.0"
edition = "2021"

[dependencies]
pest = "2.7.5"
pest_derive = "2.7.5"
log = "0.4"
lazy_static = "1.4.0"
itertools = "0.12.0"
serde = { version = "1.0", features = [ "derive" ] }
z3 = { git = 'https://github.com/prove-rs/z3.rs' }
liblisa = { path = "../../liblisa/liblisa" }

[dev-dependencies]
test-log = "0.2.10"
