[package]
name = "liblisa-xed-compare"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10"
liblisa = { path = "../../liblisa/liblisa" }
liblisa-progress = { path = "../liblisa-progress" }
serde_json = "1.0"
jemallocator = "0.5"
clap = { version = "4.4.8", features = ["derive"] }
itertools = "0.12.0"
xed-sys = "0.5"
rand = "0.8.5"
rayon = "1.5"

[dev-dependencies]
test-log = "0.2.10"
